replace taxa with features in function names

--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -520,7 +520,7 @@ Only the most prevalent taxa are included in analysis.
 
 ```{r cobiclust_1}
 # Subset data in the first experiment
-mae[[1]] <- subsetByPrevalentTaxa(mae[[1]], rank = "Genus", prevalence = 0.2, detection = 0.001)
+mae[[1]] <- subsetByPrevalentFeatures(mae[[1]], rank = "Genus", prevalence = 0.2, detection = 0.001)
 # clr-transform in the first experiment
 mae[[1]] <- transformCounts(mae[[1]], method = "relabundance")
 mae[[1]] <- transformCounts(mae[[1]], "relabundance", method = "rclr")
