--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -296,7 +296,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, addPerCellQ
 3. Report the thresholds and the dimensionality of the data before and after subsetting
 4. Visualize prevalence
 
-Useful functions: getPrevalence, getPrevalentTaxa, subsetByPrevalentTaxa
+Useful functions: getPrevalence, getPrevalentFeatures, subsetByPrevalentFeatures
 
 
 ### Data exploration
@@ -596,7 +596,7 @@ Useful functions: [], ggplot2::geom_boxplot, ggplot2::geom_jitter, wilcox.test, 
 4. Summarize findings by plotting a taxa vs samples heatmap. Add column annotation that tells the group of each sample, and row annotation that tells whether the difference of certain taxa was statistically significant.
 5. Choose statistically significant taxa and visualize their abundances with boxplot & jitterplot.
 
-Useful functions: wilcox.test, kruskal.test, ggplot, pheatmap, ComplexHeatMap::Heatmap, ancombc, aldex2, maaslin2, agglomerateByRank, transformCounts, subsetByPrevalentTaxa
+Useful functions: wilcox.test, kruskal.test, ggplot, pheatmap, ComplexHeatMap::Heatmap, ancombc, aldex2, maaslin2, agglomerateByRank, transformCounts, subsetByPrevalentFeatures
 
 
 ## Visualization
