--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -455,7 +455,7 @@ tse_genus <- transformCounts(tse,
                              assay.type = "counts")
 
 # Add info on dominant genus per sample
-tse_genus <- addPerSampleDominantTaxa(tse_genus,
+tse_genus <- addPerSampleDominantFeatures(tse_genus,
                                       assay.type = "relabundance",
                                       name = "dominant_taxa")
 ```
@@ -474,7 +474,7 @@ that A 3D interactive version of the plot below can be found in \@ref(extras).
 
 ```{r}
 # Getting the top taxa
-top_taxa <- getTopTaxa(tse_genus,
+top_taxa <- getTopFeatures(tse_genus,
                        top = 6,
                        assay.type = "relabundance")
 
