--- a/add-comm-typing.Rmd
+++ b/add-comm-typing.Rmd
@@ -22,7 +22,7 @@ tse <- tse[, colData(tse)$Country == "Finland"]
 # Agglomerate to phylum level
 tse <- agglomerateByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
 # Get top taxa
-rel_taxa <- getTopTaxa(tse, top = 8, assay.type = "counts")
+rel_taxa <- getTopFeatures(tse, top = 8, assay.type = "counts")
 # Take only the top taxa
 tse <- tse[is.element(rownames(tse), rel_taxa), ]
 
