--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -311,7 +311,7 @@ us retrieve a `r Biocpkg("MultiAssayExperiment")` dataset:
 # mae <- HintikkaXOData()
 # Since HintikkaXOData is now added to mia, we can load it directly from there
 # We suggest to check other datasets from microbiomeDataSets
-data(HintikkaXOData)
+data(HintikkaXOData, package = "mia")
 mae <- HintikkaXOData
 ```
 
