--- a/OMA.Rmd
+++ b/OMA.Rmd
@@ -583,7 +583,7 @@ us retrieve a `r Biocpkg("MultiAssayExperiment")` data set:
 # mae <- HintikkaXOData()
 # Since HintikkaXOData is now added to mia, we can load it directly from there
 # We suggest to check other datasets from microbiomeDataSets
-data(HintikkaXOData)
+data(HintikkaXOData, package = "mia")
 mae <- HintikkaXOData
 ```
 
