--- a/OMA.Rmd
+++ b/OMA.Rmd
@@ -973,7 +973,7 @@ We notice that the imported biom file did not contain the sample meta data
 yet, so it includes an empty data frame.
 
 ```{r}
-head(se)
+head(colData(se))
 ```
 
 Let us add a sample metadata file.
@@ -997,13 +997,13 @@ sample_meta[,1] <- NULL
 colnames(sample_meta) <- c("patient_status", "cohort", "patient_status_vs_cohort", "sample_name")
 
 # Then it can be added to colData
-se <- sample_meta
+colData(se) <- sample_meta
 ```
 
 Now `colData` includes the sample metadata.
 
 ```{r}
-head(se)
+head(colData(se))
 ```
 
 Now, let's add a phylogenetic tree.
