--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -270,7 +270,7 @@ The same action can also be applied to the features.
 
 ```{r}
 # Take only those samples that are collected from feces, skin, or tongue
-tse_genus_sub <- tse_genus[ , colData(tse_genus)$SampleType %in% c("Feces", "Skin", "Tongue")]
+tse_genus_sub <- tse_genus[ , tse_genus$SampleType %in% c("Feces", "Skin", "Tongue")]
 
 tse_genus_sub
 ```
