--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -84,7 +84,7 @@ tse <- transformCounts(tse,
                        method = "relabundance")
 
 # Add group information Feces yes/no
-colData(tse)$Group <- colData(tse)$SampleType == "Feces"
+tse$Group <- tse$SampleType == "Feces"
 ```
 
 ### Comparing communities by beta diversity analysis
