--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -101,7 +101,7 @@ _pheatmap_ is a package that provides methods to plot clustered heatmaps.
 library(pheatmap)
 
 # Takes subset: only samples from feces, skin, or tongue
-tse_phylum_subset <- tse_phylum[ , colData(tse_phylum)$SampleType %in% c("Feces", "Skin", "Tongue") ]
+tse_phylum_subset <- tse_phylum[ , tse_phylum$SampleType %in% c("Feces", "Skin", "Tongue") ]
 
 # Add clr-transformation
 tse_phylum_subset <- transformCounts(tse_phylum_subset,
