--- a/OMA.Rmd
+++ b/OMA.Rmd
@@ -1368,7 +1368,7 @@ The same action can also be applied to the features.
 
 ```{r}
 # Take only those samples that are collected from feces, skin, or tongue
-tse_genus_sub <- tse_genus[ , colData(tse_genus)$SampleType %in% c("Feces", "Skin", "Tongue")]
+tse_genus_sub <- tse_genus[ , tse_genus$SampleType %in% c("Feces", "Skin", "Tongue")]
 
 tse_genus_sub
 ```
@@ -2179,8 +2179,7 @@ library(ggsignif)
 
 # Subsets the data. Takes only those samples that are from feces, skin, or tongue,
 # and creates data frame from the collected data
-df <- as.data.frame(colData(tse)[colData(tse)$SampleType %in% 
-                                  c("Feces", "Skin", "Tongue"), ])
+df <- as.data.frame(tse[ , tse$SampleType %in% c("Feces", "Skin", "Tongue")])
 
 # Changes old levels with new levels
 df$SampleType <- factor(df$SampleType)
@@ -2403,7 +2402,7 @@ tse <- GlobalPatterns
 tse <- transformCounts(tse, method = "relabundance")
 
 # Add group information Feces yes/no
-colData(tse)$Group <- colData(tse)$SampleType=="Feces"
+tse$Group <- tse$SampleType=="Feces"
 
 # Quantify dissimilarities in the original feature space
 library(vegan)
@@ -3031,7 +3030,7 @@ _pheatmap_ is a package that provides methods to plot clustered heatmaps.
 library(pheatmap)
 
 # Takes subset: only samples from feces, skin, or tongue
-tse_phylum_subset <- tse_phylum[ , colData(tse_phylum)$SampleType %in% c("Feces", "Skin", "Tongue") ]
+tse_phylum_subset <- tse_phylum[ , tse_phylum$SampleType %in% c("Feces", "Skin", "Tongue") ]
 
 # Add clr-transformation
 tse_phylum_subset <- transformCounts(tse_phylum_subset,
