updated transformCounts to transformAssay

--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -42,7 +42,7 @@ data(hitchip1006)
 tse <- hitchip1006
 
 # Add relative abundances
-tse <- transformCounts(tse, MARGIN = "samples", method = "relabundance")
+tse <- transformAssay(tse, MARGIN = "samples", method = "relabundance")
 
 # Use argument names
 # assay.type / assay.type / assay.type
