--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -278,7 +278,7 @@ tse_order <- agglomerateByRank(tse,
                                 rank = "Order",
                                 onRankOnly = TRUE)
 # transform counts into relative abundance
-tse_order <- transformCounts(tse_order,
+tse_order <- transformAssay(tse_order,
                               assay.type = "counts",
                               method = "relabundance")
 # get top orders
@@ -350,10 +350,10 @@ tse_phylum <- agglomerateByRank(tse,
                                 onRankOnly = TRUE)
 
 # Add clr-transformation on samples
-tse_phylum <- transformCounts(tse_phylum, MARGIN = "samples", method = "clr", assay.type = "counts", pseudocount=1)
+tse_phylum <- transformAssay(tse_phylum, MARGIN = "samples", method = "clr", assay.type = "counts", pseudocount=1)
 
 # Add z-transformation on features (taxa)
-tse_phylum <- transformCounts(tse_phylum, assay.type = "clr",
+tse_phylum <- transformAssay(tse_phylum, assay.type = "clr",
                               MARGIN = "features", 
                               method = "z", name = "clr_z")
 
@@ -361,11 +361,11 @@ tse_phylum <- transformCounts(tse_phylum, assay.type = "clr",
 tse_phylum_subset <- tse_phylum[ , tse_phylum$SampleType %in% c("Feces", "Skin", "Tongue") ]
 
 # Add clr-transformation
-tse_phylum_subset <- transformCounts(tse_phylum_subset, method = "clr",
+tse_phylum_subset <- transformAssay(tse_phylum_subset, method = "clr",
                                      MARGIN="samples",
                                      assay.type = "counts", pseudocount=1)
 # Does z-transformation
-tse_phylum_subset <- transformCounts(tse_phylum_subset, assay.type = "clr",
+tse_phylum_subset <- transformAssay(tse_phylum_subset, assay.type = "clr",
                                      MARGIN = "features", 
                                      method = "z", name = "clr_z")
 
