--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -102,7 +102,7 @@ bacterium X is present, is the concentration of metabolite Y lower or higher"?
 # Agglomerate microbiome data at family level
 mae[[1]] <- agglomerateByPrevalence(mae[[1]], rank = "Family")
 # Does log10 transform for microbiome data
-mae[[1]] <- transformCounts(mae[[1]], method = "log10", pseudocount = 1)
+mae[[1]] <- transformAssay(mae[[1]], method = "log10", pseudocount = 1)
 
 # Give unique names so that we do not have problems when we are creating a plot
 rownames(mae[[1]]) <- getTaxonomyLabels(mae[[1]])
@@ -184,16 +184,16 @@ colData(mae)$Diet <- ifelse(colData(mae)$Diet == "High-fat" |
 mae[[1]] <- mae[[1]][!duplicated(rownames(assay(mae[[1]]))), ]
 
 # Transforming microbiome data with rclr
-mae[[1]] <- transformCounts(mae[[1]], method = "relabundance")
-mae[[1]] <- transformCounts(mae[[1]], assay.type = "relabundance", method = "rclr")
+mae[[1]] <- transformAssay(mae[[1]], method = "relabundance")
+mae[[1]] <- transformAssay(mae[[1]], assay.type = "relabundance", method = "rclr")
 
 # Transforming metabolomic data with log10
-mae[[2]] <- transformCounts(mae[[2]], assay.type = "nmr",
+mae[[2]] <- transformAssay(mae[[2]], assay.type = "nmr",
                             MARGIN = "samples",
                             method = "log10")
 
 # Transforming biomarker data with z-transform
-mae[[3]] <- transformCounts(mae[[3]], assay.type = "signals",
+mae[[3]] <- transformAssay(mae[[3]], assay.type = "signals",
                             MARGIN = "features",
                             method = "z", pseudocount = 1)
 
