--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -181,7 +181,7 @@ assay, and perform prevalence filtering.
 
 ```{r datasetup}
 tse <- agglomerateByRank(tse0, rank = "genus") %>%
-       transformCounts(assay.type = "counts",
+       transformAssay(assay.type = "counts",
                        method = "relabundance",
 		       MARGIN = "samples") %>%
        # subset based on the relative abundance assay		       
@@ -190,7 +190,7 @@ tse <- agglomerateByRank(tse0, rank = "genus") %>%
 			     assay.type = "relabundance")
 
 # Add also clr abundances
-tse <- transformCounts(tse, method="clr", pseudocount=1) # not bale to run
+tse <- transformAssay(tse, method="clr", pseudocount=1) # not bale to run
 ```
 
 Regarding prevalence filtering, @Nearing2022 found that applying a 10%
