--- a/40_machine_learning.Rmd
+++ b/40_machine_learning.Rmd
@@ -49,7 +49,7 @@ Let's first preprocess the data.
 tse <- agglomerateByRank(tse, rank = "order")
 
 # Apply CLR transform
-tse <- transformCounts(tse, assay.type = "counts", method = "clr",
+tse <- transformAssay(tse, assay.type = "counts", method = "clr",
                        MARGIN="samples", pseudocount=1)
 
 # Get assay
