--- a/98_exercises.Rmd
+++ b/98_exercises.Rmd
@@ -305,7 +305,7 @@ Useful functions: getPrevalence, getPrevalentTaxa, subsetByPrevalentTaxa
 2. Create two histograms. Another shows the distribution of absolute counts, another shows how CLR transformed values are distributed.
 3. Visualize how relative abundances are distributed between taxa in samples.
 
-Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformCounts, ggplot, wilcox.test, agglomerateByRank, plotAbundance
+Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAssay, ggplot, wilcox.test, agglomerateByRank, plotAbundance
 
 ### Other functions
 
@@ -317,7 +317,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformCo
 
 1. Import the mia package, load peerj13075 with `data` and store it into a
    variable named `tse`.
-2. Transform the counts assay into relative abundances with `transformCounts` and
+2. Transform the counts assay into relative abundances with `transformAssay` and
    store it into the TreeSE as an assay named `relabund` (see chapter \ref(assay-transform)).
 3. Similarly, perform a clr transformation on the counts assay with a `pseudocount`
    of 1 and add it to the TreeSE as a new assay.
@@ -482,7 +482,7 @@ find many of them under methods in the vignettes of `vegan::vegdist`.
 
 1. Import the mia and scater packages, load enterotype with `data` and store it
    into a variable named `tse`.
-2. Transform the counts assay to relative abundances with `transformCounts`.
+2. Transform the counts assay to relative abundances with `transformAssay`.
 3. Perform a Multi-Dimensional Scaling (MDS) based on the relative abundance
    assay in terms of Bray-Curtis dissimilarity. You can use `runMDS` with the
    compulsory argument `FUN = vegan::vegdist`.
@@ -508,7 +508,7 @@ PERMDISP2 analysis (point 5).
 
 1. Import the mia and vegan packages, load peerj13075 with `data` and store it
    into a variable named `tse`.
-2. Transform the `counts` assay into relative abundances with `transformCounts`.
+2. Transform the `counts` assay into relative abundances with `transformAssay`.
 3. Extract the relative abundance assay, transpose it and save it into
    a variable named `relabund_assay`.
 4. Perform PERMANOVA with `adonis2` to see how much Diet can explain the relative
@@ -538,7 +538,7 @@ down into steps below will hopefully make more sense.
 
 1. Import the mia and vegan packages, load peerj13075 with `data` and store it
    into a variable named `tse`.
-2. Transform the `counts` assay into relative abundances with `transformCounts`.
+2. Transform the `counts` assay into relative abundances with `transformAssay`.
 3. Perform RDA with `calculateRDA` to see how much Diet can explain the relative
    abundance assay (`formula = assay ~ Diet` and `assay.type = relabundance`) in
    terms of Bray-Curtis dissimilarity (`method = "bray"`).
@@ -567,7 +567,7 @@ walkthrough, which may be simplified in the future.
 5. Analyze diets' association on beta diversity. Calculate dbRDA and then PERMANOVA. Visualize coefficients. Which taxa's abundances differ the most between samples? 
 6. Interpret your results. Is there association between community composition and location? What are those taxa that differ the most; find information from literature.
 
-Useful functions: runMDS, runRDA, anova.cca, transformCounts, agglomerateByRank, ggplot, plotReducedDim, vegan::adonis2
+Useful functions: runMDS, runRDA, anova.cca, transformAssay, agglomerateByRank, ggplot, plotReducedDim, vegan::adonis2
 
 
 
@@ -585,7 +585,7 @@ Useful functions: runMDS, runRDA, anova.cca, transformCounts, agglomerateByRank,
 7. Do multiple testing correction
 9. Compare the results from different tests with a scatterplot
 
-Useful functions: [], ggplot2::geom_boxplot, ggplot2::geom_jitter, wilcox.test, lm.test, transformCounts, p.adjust
+Useful functions: [], ggplot2::geom_boxplot, ggplot2::geom_jitter, wilcox.test, lm.test, transformAssay, p.adjust
 
 
 ### Differential abundance analysis
@@ -596,7 +596,7 @@ Useful functions: [], ggplot2::geom_boxplot, ggplot2::geom_jitter, wilcox.test, 
 4. Summarize findings by plotting a taxa vs samples heatmap. Add column annotation that tells the group of each sample, and row annotation that tells whether the difference of certain taxa was statistically significant.
 5. Choose statistically significant taxa and visualize their abundances with boxplot & jitterplot.
 
-Useful functions: wilcox.test, kruskal.test, ggplot, pheatmap, ComplexHeatMap::Heatmap, ancombc, aldex2, maaslin2, agglomerateByRank, transformCounts, subsetByPrevalentTaxa
+Useful functions: wilcox.test, kruskal.test, ggplot, pheatmap, ComplexHeatMap::Heatmap, ancombc, aldex2, maaslin2, agglomerateByRank, transformAssay, subsetByPrevalentTaxa
 
 
 ## Visualization
@@ -609,7 +609,7 @@ Useful functions: wilcox.test, kruskal.test, ggplot, pheatmap, ComplexHeatMap::H
 4. Visualize and compare both
 5. Test other transformations, dissimilarities, and ordination methods
 
-Useful functions: runMDS, runNMDS, transformCounts, ggplot, plotReducedDim
+Useful functions: runMDS, runNMDS, transformAssay, ggplot, plotReducedDim
 
 
 ### Heatmap visualization
@@ -675,13 +675,13 @@ transformation of assays of individual experiments in the MAE.
 2. What assays are contained by each individual experiment? You can check their
    names with `assays`.
 3. Apply a log10 transformation to the assay of the metabolite experiment.
-   For that you can use `transformCounts` and don't forget to specify the assay
+   For that you can use `transformAssay` and don't forget to specify the assay
    to be transformed with the argument `assay.type`.
 4. Apply a CLR transformation to the counts assay of the microbiota experiment.
    To ensure non-null values in the assay, set `pseudocount` equal to 1.
    
 You made it! You learnt how to apply different transformations to the assays
-of individual experiments in a MAE with `transformCounts`, specifying optional
+of individual experiments in a MAE with `transformAssay`, specifying optional
 arguments based on the used method.
 
 ### Assay extraction
