--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -23,7 +23,7 @@ For several custom analysis and visualization packages, such as those from
 library(mia)
 data(GlobalPatterns, package="mia")
 tse <- GlobalPatterns
-tse <- transformCounts(tse, MARGIN = "samples", method="relabundance")
+tse <- transformAssay(tse, MARGIN = "samples", method="relabundance")
 molten_tse <- mia::meltAssay(tse,
                         add_row_data = TRUE,
                         add_col_data = TRUE,
