--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -24,7 +24,7 @@ samples by "Bacteroidetes":
 ```{r}
 library(miaViz)
 # Computing relative abundance
-tse <- transformCounts(tse, assay.type = "counts", method = "relabundance")
+tse <- transformAssay(tse, assay.type = "counts", method = "relabundance")
 
 # Getting top taxa on a Phylum level
 tse_phylum <- agglomerateByRank(tse, rank ="Phylum", onRankOnly=TRUE)
@@ -59,14 +59,14 @@ techniques, we can visualize the abundances at Phylum level.
 library(ggplot2)
 
 # Add clr-transformation on samples
-tse_phylum <- transformCounts(tse_phylum, assay.type = "counts",
+tse_phylum <- transformAssay(tse_phylum, assay.type = "counts",
                               method = "relabundance", pseudocount = 1)
 
-tse_phylum <- transformCounts(tse_phylum, assay.type = "relabundance",
+tse_phylum <- transformAssay(tse_phylum, assay.type = "relabundance",
                               method = "clr", pseudocount = 1)
 
 # Add z-transformation on features (taxa)
-tse_phylum <- transformCounts(tse_phylum, assay.type = "clr", 
+tse_phylum <- transformAssay(tse_phylum, assay.type = "clr", 
                               MARGIN = "features",
                               method = "z", name = "clr_z")
 ```
@@ -104,11 +104,11 @@ library(pheatmap)
 tse_phylum_subset <- tse_phylum[ , tse_phylum$SampleType %in% c("Feces", "Skin", "Tongue") ]
 
 # Add clr-transformation
-tse_phylum_subset <- transformCounts(tse_phylum_subset,
+tse_phylum_subset <- transformAssay(tse_phylum_subset,
                          method = "clr",
     			 pseudocount = 1)
 
-tse_phylum_subset <- transformCounts(tse_phylum_subset, assay.type = "clr",
+tse_phylum_subset <- transformAssay(tse_phylum_subset, assay.type = "clr",
                                      MARGIN = "features", 
                                      method = "z", name = "clr_z")
 
