--- a/add-comm-typing.Rmd
+++ b/add-comm-typing.Rmd
@@ -46,9 +46,9 @@ tse <- agglomerateByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
 tse <- tse[is.element(rownames(tse), rel_taxa),]
 
 # CLR and Z transforms
-tse <- transformCounts(tse, MARGIN = "samples", assay.type = "counts",
+tse <- transformAssay(tse, MARGIN = "samples", assay.type = "counts",
                        method = "clr", pseudocount=1)
-tse <- transformCounts(tse, MARGIN = "features", assay.type = "clr", method = "z")
+tse <- transformAssay(tse, MARGIN = "features", assay.type = "clr", method = "z")
 
 Countries <- data.frame("Country" = colData(tse)$Country)
 rownames(Countries) <- colData(tse)$Sample_ID
@@ -219,9 +219,9 @@ Looking at heatmaps of the CSTs can reveal structure on a different level. Using
 ```{r message = FALSE, warning = FALSE, results = FALSE}
 
 # Z transform of CLR counts
-tse2 <- transformCounts(tse2, MARGIN = "samples", assay.type = "counts",
+tse2 <- transformAssay(tse2, MARGIN = "samples", assay.type = "counts",
                         method = "clr", pseudocount=1)
-tse2 <- transformCounts(tse2, MARGIN = "features", assay.type = "clr", method = "z")
+tse2 <- transformAssay(tse2, MARGIN = "features", assay.type = "clr", method = "z")
 # get top taxa
 tse2 <- tse2[is.element(rownames(tse2), rel_taxa), ]
 
@@ -349,7 +349,7 @@ Computing the bray PCoA and storing it as a dataframe
 
 ```{r}
 # Calculate relative abundances
-tse_dmn <- transformCounts(tse_dmn, method = "relabundance")
+tse_dmn <- transformAssay(tse_dmn, method = "relabundance")
 # Does principal coordinate analysis
 bray_pcoa_df <- calculateMDS(tse_dmn, FUN = vegan::vegdist, method = "bray", 
                              assay.type = "relabundance")
@@ -380,10 +380,10 @@ Visualise dmm clusters in a heatmap.
 
 ```{r}
 # get clr + z-transformed counts
-tse_dmn <- transformCounts(tse_dmn, MARGIN = "samples",
+tse_dmn <- transformAssay(tse_dmn, MARGIN = "samples",
                            assay.type = "counts", method = "clr",
 			   pseudocount = 1)
-tse_dmn <- transformCounts(tse_dmn, MARGIN = "features",
+tse_dmn <- transformAssay(tse_dmn, MARGIN = "features",
                            assay.type = "clr", method = "z")
 # objects containing dmm component information
 clust <- factor(vec)
